--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.42"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_yaml = "0.9"
 rand = "0.10.0-rc.0"
 
